--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "tasker"
 version = "0.1.0"
 edition = "2021"
 
+#fix bag
+
 [dependencies]
 eframe = "0.27"
 serde = { version = "1.0", features = ["derive"] }
